@@ -1,4 +1,5 @@
 {-# LANGUAGE CPP, FlexibleInstances, FlexibleContexts, MultiParamTypeClasses #-}
 module Uniplate.DataOnly where
 import Data.Generics.Uniplate.DataOnly
+#define SKIP_ZIPPER
 #include "CommonInc.hs"
